= {project-name} Changelog
:project-name: Asciidoctor PDF
:url-repo: https://github.com/asciidoctor/asciidoctor-pdf

This document provides a high-level view of the changes to the {project-name} by release.
For a detailed view of what has changed, refer to the {url-repo}/commits/main[commit history] on GitHub.

== Unreleased

Improvements::

* drop links from entries in TOC (#2505)

== 2.3.14 (2024-03-08) - @mojavelinux

Improvements::

* upgrade prawn-svg to 0.34 to add support for SVG referenced by image tag (SVG in SVG)

Bug Fixes::

* propagate source location to table cell for description in horizontal dlist so it is included in truncation warning message (#2502)
* eradicate use of the base64 library to fix warning about base64 gem when using Ruby >= 3.3
* upgrade prawn-svg to 0.34 to fix warning about base64 gem when using Ruby >= 3.3; apply additional patch to fix bug in prawn-svg

Build / Infrastructure::

* bump upper Ruby version to 3.3 in CI workflow

=== Details

{url-repo}/releases/tag/v2.3.14[git tag] | {url-repo}/compare/v2.3.13\...v2.3.14[full diff]

== 2.3.13 (2024-02-16) - @mojavelinux

Improvements::

* support toc start at value for page numbering and running content when toc is added using macro (#2489)

Bug Fixes::

* don't drop text on line above inline image macro in running content value (#2495)
* when looking for a value that only contains an image macro, match the whole string instead of per line (#2495)
* don't warn about missing character in fallback font when inline image is advanced to next page (#2492)
* fix page number of index entries in prepress book when page numbering starts at toc or after toc and toc is inserted using macro (#2487)

=== Details

{url-repo}/releases/tag/v2.3.13[git tag] | {url-repo}/compare/v2.3.12\...v2.3.13[full diff]

== 2.3.12 (2024-02-02) - @mojavelinux

Improvements::

* add combining characters to bundled fonts (#2482)

Bug Fixes::
